WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101810
IndexedDB: Complex series of opens/deleteDatabase fails an ASSERT
https://bugs.webkit.org/show_bug.cgi?id=101810
Summary
IndexedDB: Complex series of opens/deleteDatabase fails an ASSERT
David Grogan
Reported
2012-11-09 16:17:23 PST
IndexedDB: Complex series of opens/deleteDatabase fails an ASSERT
Attachments
repro
(6.25 KB, patch)
2012-11-09 16:17 PST
,
David Grogan
no flags
Details
Formatted Diff
Diff
repro
(3.19 KB, application/javascript)
2012-11-09 16:24 PST
,
David Grogan
no flags
Details
Patch
(12.58 KB, patch)
2012-11-19 15:59 PST
,
David Grogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Grogan
Comment 1
2012-11-09 16:17:42 PST
Created
attachment 173392
[details]
repro
David Grogan
Comment 2
2012-11-09 16:24:18 PST
Created
attachment 173393
[details]
repro Partially converted deletedatabase-delayed-by-versionchange.js that uses indexedDBTest
David Grogan
Comment 3
2012-11-09 16:26:11 PST
Somehow while pending opens are being processed another open gets added to the pending queue. ASSERTION FAILED: m_pendingOpenCalls.isEmpty() ../../third_party/WebKit/Source/WebCore/Modules/indexeddb/IDBDatabaseBackendImpl.cpp(423) : void WebCore::IDBDatabaseBackendImpl::processPendingCalls()
David Grogan
Comment 4
2012-11-09 16:26:51 PST
Just a bug report so far, no investigation or fix.
David Grogan
Comment 5
2012-11-19 15:59:14 PST
Created
attachment 175066
[details]
Patch
David Grogan
Comment 6
2012-11-19 16:00:12 PST
Josh, this is one of the straggler tests, could you take a look?
Joshua Bell
Comment 7
2012-11-19 16:43:59 PST
Comment on
attachment 175066
[details]
Patch lgtm; would be nice to rename some of the test functions, but that can wait.
David Grogan
Comment 8
2012-11-19 16:51:03 PST
Tony, could you review this?
WebKit Review Bot
Comment 9
2012-11-19 18:10:59 PST
Comment on
attachment 175066
[details]
Patch Clearing flags on attachment: 175066 Committed
r135226
: <
http://trac.webkit.org/changeset/135226
>
WebKit Review Bot
Comment 10
2012-11-19 18:11:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug